# ShowtapCore

./: .gitignore
STCoreLibrary/: CMakeLists.txt  main.cpp
STCoreLibrary.xcodeproj/: project.pbxproj
STCoreLibrary.xcodeproj/xcshareddata/xcschemes/: STCoreLibrary.xcscheme
STCoreLibrary.xcodeproj/xcuserdata/lavalse.xcuserdatad/xcschemes/: xcschememanagement.plist
STCoreLibrary/include/: base64.h  constants.hpp  display.h  errors.hpp  globals.h  input_parser.hpp  logger.h  showtap_file_reader.hpp
STCoreLibrary/include/dto/: abs_json.h  showtap_metadata.h  showtap_object.h  thumbnail_info.h
STCoreLibrary/include/dto/showtap/: effect.h  enumerates.h  font.h  include_package.h  metadata.h  object.h  page.h  resource.h
STCoreLibrary/include/dto/showtap/intf/: imedia.h
STCoreLibrary/include/extension/: efile.h  estring.h
STCoreLibrary/include/rapidjson/: document.h  encodings.h  rapidjson.h  reader.h  writer.h
STCoreLibrary/include/rapidjson/internal/: biginteger.h  diyfp.h  strtod.h
STCoreLibrary/parser/: CMakeLists.txt  input_parser.cpp
STCoreLibrary/reader/: CMakeLists.txt  display.cpp  showtap_file_reader.cpp
STCoreLibrary/reader/dto/: showtap_metadata.cpp  showtap_object.cpp  thumbnail_info.cpp
STCoreLibrary/reader/dto/include/: abs_json.h  showtap_metadata.h  showtap_object.h  thumbnail_info.h
STCoreLibrary/reader/dto/showtap/: effect.cpp  font.cpp  metadata.cpp  object.cpp  page.cpp  resource.cpp
STCoreLibrary/reader/extension/: efile.cpp  estring.cpp  utf8proc.c  utf8proc_data.c
